# jhsymphony

./: .gitignore  demo.py  jhsymphony.sh  jhsymphony.yaml.example  pyproject.toml  run_service.py
docs/superpowers/plans/: 2026-03-29-jhsymphony-mvp.md  2026-04-01-approval-flow-redesign.md
docs/superpowers/specs/: 2026-03-29-jhsymphony-design.md  2026-04-01-approval-flow-redesign.md  2026-04-02-pr-revision-and-verification-v2.md  2026-04-03-symphony-flow-improvements.md
src/jhsymphony/: config.py  main.py  models.py
src/jhsymphony/cli/: app.py
src/jhsymphony/dashboard/: app.py  ws.py
src/jhsymphony/dashboard/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/jhsymphony/dashboard/frontend/src/: App.tsx
src/jhsymphony/dashboard/routes/: issues.py  runs.py  stats.py
src/jhsymphony/dashboard/static/: index.html
src/jhsymphony/dashboard/static/assets/: index-pzSIB03s.js
src/jhsymphony/orchestrator/: dispatcher.py  lease.py  reconciler.py  scheduler.py
src/jhsymphony/providers/: base.py  claude.py  codex.py  gemini.py  router.py
src/jhsymphony/review/: reviewer.py
src/jhsymphony/storage/: base.py  sqlite.py
src/jhsymphony/tracker/: base.py  github.py
src/jhsymphony/workspace/: isolation.py  manager.py
tests/: conftest.py  test_cli.py  test_config.py  test_dashboard.py  test_dispatcher.py  test_integration.py  test_lease.py  test_models.py  test_providers.py  test_reconciler.py  test_reviewer.py  test_scheduler.py  test_storage.py  test_tracker.py  test_workspace.py
(+4 files in other folders)
