[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jhsymphony"
version = "0.1.0"
description = "Autonomous agent orchestration for development automation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.0",
]

[project.scripts]
jhsymphony = "jhsymphony.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/jhsymphony"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
